--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ nav{
   justify-content: space-between;
   align-items: center;
   padding: 0 20%;
-  min-height: 10vh;
+  min-height: 8vh;
   background: rgba(255, 255, 255, 0.6);
   z-index: 10;
   backdrop-filter: blur(10px);
@@ -68,4 +68,29 @@ font-size: 0.9rem;
 }
 .intro-video{
 position: absolute;
+}
+
+/* second page */
+
+.second-page{
+  min-height: 125vh;
+  color: rgb(255, 255, 255, 0.6);
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+}
+.smoke-video{
+  position: absolute;
+  height: 100%;
+  width: 100vw;
+  object-fit: cover;
+  z-index: 1;
+}
+.second-text{
+  padding: 5% 30%;
+  position: relative;
+  z-index: 2;
+  font-size: 3.5rem;
+  font-weight: bold;
 }
