--- a/style.css
+++ b/style.css
@@ -142,3 +142,55 @@ position: absolute;
   font-size: 0.8rem;
   font-weight: bold;
 }
+
+/* forth page */
+
+.forth-page{
+  min-height: 100vh;
+  display: flex;
+  position: relative;
+}
+.purchase-left{
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+.phone-gallery{
+  display: flex;
+  align-self: flex-start;
+}
+.phone-gallery img{
+  transform: scale(0.5);
+}
+.phone-gallery-container{
+  min-width: 50vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.swatch-container{
+  text-align: center;
+}
+.swatch-container span{
+  font-size: 0.8rem;
+}
+.swatches img{
+  padding: 0.5rem 0.3rem;
+  cursor: pointer;
+}
+/* Purchase right */
+.purchase-right{
+  flex: 1;
+  position: relative;
+  background: #000;
+}
+.purchase-right img{
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0%) scale(0.8);
+  transform-origin: bottom;
+}
