--- a/style.css
+++ b/style.css
@@ -194,3 +194,39 @@ position: absolute;
   transform: translate(-50%, 0%) scale(0.8);
   transform-origin: bottom;
 }
+
+/* fifth page */
+
+.fifth-page{
+  min-height: 100vh;
+}
+.product-video{
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  object-fit: cover;
+  z-index: 1;
+}
+.product-info-container{
+  position: relative;
+  z-index: 2;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  min-height: 100vh;
+  justify-content: space-between;
+  padding: 0% 10rem;
+}
+.right-info, .left-info{
+  width: 20%;
+}
+.left-info h3,
+.right-info h3{
+  padding: 3rem 0rem;
+  color: rgb(193, 193, 193);
+}
+.left-info span,
+.right-info span{
+  font-size: 1.5rem; 
+  color: rgb(193, 193, 193);
+}
