--- a/style.css
+++ b/style.css
@@ -230,3 +230,45 @@ position: absolute;
   font-size: 1.5rem; 
   color: rgb(193, 193, 193);
 }
+
+
+/* six page */
+
+.sixth-page{
+  display: flex;
+  min-height: 100vh;
+  padding: 10% 20%;
+  justify-content: space-between;
+  position: relative;
+}
+.portrait{
+  height: 70vh;
+}
+.photo-title{
+  font-size: 2rem;
+}
+.photo-subtitle{
+  font-size: 4rem;
+}
+.phone-video{
+  position: absolute;
+  bottom: 0;
+  left: 40%;
+  z-index: 2;
+  transform: translate(-40%, 0%);
+}
+.phone-video img, .phone-video video{
+  position: absolute;
+}
+.phone-video img{
+  z-index: 2;
+  bottom: 0rem;
+  left: 0rem;
+  transform: scale(0.7);
+}
+.phone-video video{
+  left: 1rem;
+  bottom: 1rem;
+  transform: scale(0.7);
+  border-radius: 2rem;
+}
